# stage_lite

./: CMakeLists.txt  README.md
assets/: CMakeLists.txt
avonstage/: CMakeLists.txt
cmake/: stage-config.cmake.in  stage.pc.in
examples/: CMakeLists.txt
libstage/: CMakeLists.txt
libstageplugin/: CMakeLists.txt
src/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/ctrl/: CMakeLists.txt  dynamic.cc  fasr.cc  fasr2.cc  lasernoise.cc  pioneer_flocking.cc  rasterize.cc  sink.cc  source.cc  wander.cc  wander_accel.cc
src/examples/libstage/: CMakeLists.txt
src/libstage/: CMakeLists.txt
src/libstage/src/: canvas.cc  main.cc  worldfile.cc
src/replace/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt
worlds/: CMakeLists.txt
worlds/benchmark/: CMakeLists.txt
worlds/bitmaps/: CMakeLists.txt
worlds/wifi/: CMakeLists.txt
